--- a/theme/admin/views_add.html
+++ b/theme/admin/views_add.html
@@ -11,24 +11,23 @@
   <script src="/theme/admin/assets/js/vue-resource.js"></script>
 </head>
 <body>
+  <div class="header">
+		<div class="header_nav">HunterPHP 终极核武器 Views</div>
+	</div>
   <div id="App">
     <form class="view-config" action="#">
       <div class="form-item">
         <label class="form-label">名称</label>
         <div class="input-block">
-          <input type="text" name="view_name" v-model="view_name" class="input">
+          <input type="text" name="view_name" v-model="view_name">
         </div>
-      </div>
-      <div class="form-item">
         <div class="input-block">
           <input type="checkbox" name="has_description" title="描述" v-model="has_description">描述
-          <div class="input-block">
-            <input type="text" name="view_description" v-if="has_description" v-model="view_description" class="input lay-hide">
-          </div>
+          <input type="text" name="view_description" v-if="has_description" v-model="view_description">
         </div>
       </div>
 
-      <div class="form-item">
+      <div class="form-item" id="view_table">
         <label class="form-label">查询</label>
         <div class="input-inline">
           <select name="view_table" v-model="view_table" @change="updateField">
@@ -38,10 +37,10 @@
         </div>
       </div>
 
-      <div class="form-item" v-if="relationships.length != 0">
+      <div class="form-item" id="view_relation" v-if="relationships.length != 0">
         <label class="form-label">关联</label>
         <div class="input-inline">
-          <select name="view_pager" v-model="view_relation_table" @change="addRelationshipFields">
+          <select name="view_relation" v-model="view_relation_table" @change="addRelationshipFields">
             <option value="">请选择表</option>
             <option value="mini_pager" v-for="rtable in relationships" :value="rtable">@{{ rtable }}</option>
           </select>
@@ -51,52 +50,50 @@
       <div class="form-item" pane="" v-if="view_table != ''">
         <label class="form-label">选择字段</label>
         <div class="input-block" v-if="fields">
-          <div v-for="(field, key) in fields">
-            <input type="checkbox" :name="'view_fields['+key+']'" :value="key" v-model="view_fields" :title="field.name">@{{ field.name }}
-          </div>
+          <ul>
+            <li v-for="(field, key) in fields">
+              <input type="checkbox" :name="'view_fields['+key+']'" :value="key" v-model="view_fields" :title="field.name">@{{ field.name }}
+            </li>
+          </ul>
         </div>
       </div>
 
-      <div><label class="form-label">格式化</label></div>
-
-      <button class="btn btn-primary btn-mini" @click="setTextarea('htmllist', $event)">Html List</button>
-      <button class="btn btn-primary btn-mini" @click="setTextarea('table', $event)">Table</button>
-      <button class="btn btn-primary btn-mini" @click="setTextarea('none', $event)">Unformatted list</button>
-
-      <div><label class="form-label" v-if="view_fields != ''">可用字段</label></div>
-
-      <button class="btn btn-primary btn-mini" v-for="field in view_fields">@{{ field }}</button>
-
       <div class="form-item" pane="" v-if="view_table != ''">
         <label class="form-label">过滤</label>
+        <div class="view_filters_list" v-if="view_filters">
+          <ul>
+            <li v-for="(filter, key) in view_filters" :class="{'even': key % 2 === 0, 'odd': key % 2 !== 0 }"><span @click="editFilter(filter)">@{{ filter.field }} (@{{ filter.op +' '+ filter.value }})</span> <button class="destroy" @click="removeFilter(filter, $event)">Remove</button><button class="destroy" @click="editFilter(filter, $event)">Edit</button></li>
+          </ul>
+        </div>
         <div class="input-block" v-if="fields">
-          <table class="dataintable browsersupport">
-            <tbody>
+          <table class="dataintable">
+            <thead>
               <tr>
                 <th>字段</th>
                 <th>操作符</th>
                 <th>值</th>
+                <th>操作</th>
               </tr>
+             </thead>
+             <tbody>
               <tr>
-                <td class="bsIE"><input type="checkbox">field</td>
-                <td class="bsFirefox">
-                  <select class="form-select">
-                    <option value="=" selected="selected">Is equal to</option>
-                    <option value="!=">Is not equal to</option>
-                    <option value="contains">Contains</option>
-                    <option value="word">Contains any word</option>
-                    <option value="allwords">Contains all words</option>
-                    <option value="starts">Starts with</option>
-                    <option value="not_starts">Does not start with</option>
-                    <option value="ends">Ends with</option>
-                    <option value="not_ends">Does not end with</option>
-                    <option value="not">Does not contain</option>
-                    <option value="shorterthan">Length is shorter than</option>
-                    <option value="longerthan">Length is longer than</option>
-                    <option value="regular_expression">Regular expression</option>
+                <td class="bsIE">
+                  <select class="form-select" v-model="new_filter_field" @change="updateFilterOp">
+                    <option v-for="(field, key) in fields" v-if="field.filter_type" :value="key">@{{ field.name }}</option>
                   </select>
                 </td>
-                <td class="bsChrome"><input type="text" name="view_name" v-model="view_name" class="input"></td>
+                <td class="bsFirefox">
+                  <select class="form-select" v-model="new_filter_op">
+                    <option v-for="(op, key) in filter_ops" :value="key">@{{ op.title }}</option>
+                  </select>
+                </td>
+                <td class="bsChrome"><input type="text" name="new_filter_value" v-model="new_filter_value" class="input"></td>
+                <td class="bsChrome">
+                  <button class="btn btn-primary btn-mini" @click="addNewFilter" v-if="!edit_filter_mode">添加</button>
+                  <button class="btn btn-primary btn-mini" v-if="!edit_filter_mode">暴露</button>
+                  <button class="btn btn-primary btn-mini" @click="doneEditFilter" v-if="edit_filter_mode">修改</button>
+                  <button class="btn btn-primary btn-mini" @click="cancelEditFilter" v-if="edit_filter_mode">取消</button>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -106,22 +103,29 @@
       <div class="form-item" pane="" v-if="view_table != ''">
         <label class="form-label">排序</label>
         <div class="input-block" v-if="fields">
-          <table class="dataintable browsersupport">
-            <tbody>
+          <table class="dataintable">
+            <thead>
               <tr>
                 <th>字段</th>
                 <th>排序</th>
                 <th>选项</th>
+                <th>操作</th>
               </tr>
+             </thead>
+             <tbody>
               <tr>
-                <td class="bsIE"><input type="checkbox">field</td>
-                <td class="bsFirefox">
-                  <input type="radio" name="options[order]" value="ASC" checked="checked" class="form-radio">
-                  <label class="option">Sort ascending</label>
-                  <input type="radio" name="options[order]" value="DESC" class="form-radio">
-                  <label class="option">Sort descending</label>
+                <td class="bsIE">
+                  <select class="form-select" v-model="new_sort_field" @change="updateFilterOp">
+                    <option v-for="(field, key) in fields" :value="key">@{{ field.name }}</option>
+                  </select>
                 </td>
-                <td class="bsChrome"></td>
+                <td class="bsFirefox">
+                  <select class="form-select" v-model="new_sort_op">
+                    <option v-for="(op, key) in filter_ops" :value="key">@{{ op.title }}</option>
+                  </select>
+                </td>
+                <td class="bsChrome"><input type="text" name="new_sort_value" v-model="new_sort_value" class="input"></td>
+                <td class="bsChrome"><button class="btn btn-primary btn-mini" @click="addNewFilter">添加</button></td>
               </tr>
             </tbody>
           </table>
@@ -139,6 +143,18 @@
             <option value="display_number">显示部分</option>
           </select>
         </div>
+      </div>
+
+      <div class="form-item" pane="">
+        <div><label class="form-label">格式化</label></div>
+        <button class="btn btn-primary btn-mini" @click="setTextarea('htmllist', $event)">Html List</button>
+        <button class="btn btn-primary btn-mini" @click="setTextarea('table', $event)">Table</button>
+        <button class="btn btn-primary btn-mini" @click="setTextarea('none', $event)">Unformatted list</button>
+      </div>
+
+      <div class="form-item" pane="">
+        <div><label class="form-label" v-if="view_fields != ''">可用字段</label></div>
+        <button class="btn btn-primary btn-mini" v-for="field in view_fields">@{{ field }}</button>
       </div>
 
       <div><label class="form-label">模板</label></div>
